<resources>
    <string name="app_name">Storylens App</string>
    <string name="input_email">Input Your Email</string>
    <string name="invalid_email">Invalid Format</string>
    <string name="input_pass">Input Your Password</string>
    <string name="pass_length">Password must be at least 8 characters</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="name_required">Name is required</string>
    <string name="check_input">Check Your Input</string>
    <string name="name">Name</string>
    <string name="preview">Preview</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_story">Add Story</string>
    <string name="logout">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="input_image_first">Input Your Image First!</string>
    <string name="didnt_get_permission">Didn\'t get permission</string>
    <string name="setting">Setting</string>
</resources>